<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.openmarkov</groupId>
        <artifactId>OpenMarkov</artifactId>
        <version>0.3.0-SNAPSHOT</version>
    </parent>
    <artifactId>integrationTests</artifactId>
    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>bnEvaluation</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>core</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>costEffectiveness</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>dbGenerator</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>full</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>gui</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>inference</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>io</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>learning.algorithm</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>learning.core</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>learning.gui</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>learning.metric</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>sensitivityAnalysis</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.openmarkov</groupId>
            <artifactId>stochasticPropagationOutput</artifactId>
            <version>0.3.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20251224</version>
        </dependency>
        <dependency>
            <groupId>xalan</groupId>
            <artifactId>xalan</artifactId>
            <version>2.7.3</version>
        </dependency>
        <dependency>
            <groupId>com.github.javaparser</groupId>
            <artifactId>javaparser-symbol-solver-core</artifactId>
            <version>3.28.1</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.13.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!--
                        AssertJ-Swing 3.17.1 uses reflection to access JDK internals that are
                        encapsulated by the Java 9+ module system.

                        "@{argLine}" carries over whatever the coverage plugin put in the argLine
                        property. It is needed because this element replaces that property instead
                        of adding to it: drop the reference and this module silently stops being
                        measured, which is what happened until now.
                    -->
                    <argLine>
                        @{argLine}
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt=ALL-UNNAMED
                        --add-opens java.desktop/java.awt=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens java.desktop/sun.java2d=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>